--- a/.air.toml
+++ b/.air.toml
@@ -1,11 +1,12 @@
 root = "."
 tmp_dir = "tmp"
-
+ 
 [build]
 include_ext = [ "go" ]
 include_dir = [ "main" ]
 cmd = "go build -o ./tmp/main ./main/..."
-full_bin = "./tmp/main medium"
+#full_bin = "./tmp/main medium 12"
+full_bin = "./tmp/main tiny"
 
 [misc]
 clean_on_exit = true
